fix: change package name

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ bta_version=1.7.7.0_02
 loader_version=0.14.19-babric.1-bta
 # Mod
 mod_version=1.0.0
-mod_group=turniplabs
-mod_name=examplemod
+mod_group=rootenginear
+mod_name=proximitychat
